Команда открытия окна управления услугами (продуктами)

--- a/Bachelor_Net60/Views/Windows/MainWindow.xaml
+++ b/Bachelor_Net60/Views/Windows/MainWindow.xaml
@@ -16,7 +16,13 @@
                     </MenuItem.Command>
                 </MenuItem>
             </MenuItem>
-            <MenuItem Header="Правка"/>
+            <MenuItem Header="Сервис">
+                <MenuItem Header="Управление услугами">
+                    <MenuItem.Command>
+                        <cmd:ManageProductsCommand/>
+                    </MenuItem.Command>
+                </MenuItem>
+            </MenuItem>
             <MenuItem Header="Вид"/>            
         </Menu>
         <Grid>
@@ -24,7 +30,7 @@
                 <ColumnDefinition Width="200"/>
                 <ColumnDefinition Width="Auto" MinWidth="300"/>
                 <ColumnDefinition/>
-            </Grid.ColumnDefinitions>
+            </Grid.ColumnDefinitions>            
             <GroupBox Grid.Column="0" Header="Услуги">
                 <TreeView/>
             </GroupBox>
@@ -42,6 +48,9 @@
             <GroupBox Grid.Column="2" Header="Параметры заказа">
                 
             </GroupBox>
+
+            <GridSplitter Grid.Column="0" HorizontalAlignment="Right" Width="3"/>
+            <GridSplitter Grid.Column="1" HorizontalAlignment="Right" Width="3"/>
         </Grid>
     </DockPanel>
 </Window>
