--- a/Bachelor_Net60/Infrastructure/Commands/Commands.xaml
+++ b/Bachelor_Net60/Infrastructure/Commands/Commands.xaml
@@ -3,5 +3,6 @@
                     xmlns:l="clr-namespace:Bachelor_Net60.Infrastructure.Commands">
 
     <l:ColseWindow x:Key="CloseWindowCommand"/>
+    <l:ManageProductsCommand x:Key="ManageProductsCommand"/>
 
 </ResourceDictionary>
