--- a/Bachelor_Net60/Views/Windows/MainWindow.xaml
+++ b/Bachelor_Net60/Views/Windows/MainWindow.xaml
@@ -8,7 +8,7 @@
         DataContext="{Binding MainWindowModel, Source={StaticResource Locator}}"
         Title="{Binding Title}" Height="450" Width="800">
     <DockPanel>
-        <Menu DockPanel.Dock="Top">
+        <Menu IsMainMenu="True">
             <MenuItem Header="Файл">
                 <MenuItem Header="Выход">
                     <MenuItem.Command>
