Подключены частичные представления

--- a/Bachelor_Net60/App.xaml
+++ b/Bachelor_Net60/App.xaml
@@ -10,6 +10,7 @@
                 <ResourceDictionary Source="Infrastructure/Commands/Commands.xaml"/>
                 <ResourceDictionary Source="Resources/Base/Brushes.xaml"/>
                 <ResourceDictionary Source="Resources/Styles/Main.xaml"/>
+                <ResourceDictionary Source="Resources/Templates/ModelManagerViews.xaml"/>
             </ResourceDictionary.MergedDictionaries>
             
             <vm:ViewModelsLocator x:Key="Locator"/>
