--- a/Bachelor_Net60/Views/ProductEditView.xaml
+++ b/Bachelor_Net60/Views/ProductEditView.xaml
@@ -7,6 +7,10 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
-            
+        <TextBlock VerticalAlignment="Center"
+                   HorizontalAlignment="Center"
+                   FontSize="50"
+                   FontWeight="Bold"
+                   Text="Редактор продуктов"/>
     </Grid>
 </UserControl>
