--- a/Bachelor_Net60/Views/Windows/ProductsManagementWindow.xaml
+++ b/Bachelor_Net60/Views/Windows/ProductsManagementWindow.xaml
@@ -1,12 +1,13 @@
 ﻿<Window x:Class="Bachelor_Net60.Views.Windows.ProductsManagementWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" mc:Ignorable="d"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:fa="http://schemas.fontawesome.com/icons/"
         xmlns:local="clr-namespace:Bachelor_Net60.Views.Windows"
         xmlns:tree="clr-namespace:Bachelor_Net60.ViewModels"
-        mc:Ignorable="d"
+        xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
+        xmlns:behaviors="clr-namespace:Bachelor_Net60.Services"
         DataContext="{Binding ProductsManagementModel, Source={StaticResource Locator}}"
         Title="{Binding Title}" Height="450" Width="800">
     <DockPanel>
@@ -27,14 +28,17 @@
                         <RowDefinition Height="Auto"/>
                         <RowDefinition/>
                     </Grid.RowDefinitions>
-                    <TreeView Grid.Row="0"
+                    <!--<TreeView Grid.Row="0"
                               MinHeight="300"
                               DataContext="{Binding FullTreeModel, Source={StaticResource Locator}}"
-                              ItemsSource="{Binding Items}">                        
+                              ItemsSource="{Binding Items}">-->
+                    <TreeView Grid.Row="0"
+                              MinHeight="300"                              
+                              ItemsSource="{Binding Items}">
                         <TreeView.ItemContainerStyle>
                             <Style TargetType="{x:Type TreeViewItem}">
                                 <Setter Property="IsExpanded" Value="{Binding IsExpanded, Mode=TwoWay}"/>
-                                <Setter Property="IsSelected" Value="{Binding IsSelected, Mode=TwoWay}"/>
+                                <Setter Property="IsSelected" Value="{Binding IsSelected, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
                                 <Setter Property="FontWeight" Value="Normal"/>
                                 <Style.Triggers>
                                     <Trigger Property="IsSelected" Value="True">
@@ -48,7 +52,9 @@
                                 <TreeViewItem Header="{Binding Node}" Foreground="{Binding Foreground}"/>
                             </HierarchicalDataTemplate>
                         </TreeView.Resources>
-                        <!--<TreeViewItem Selected="{Binding SelectedCategory}"/>-->
+                        <i:Interaction.Behaviors>
+                            <behaviors:BindableSelectedItemBehavior2 SelectedItem="{Binding SelectedCategory, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+                        </i:Interaction.Behaviors>
                     </TreeView>
                     <StackPanel Grid.Row="1"
                                 Orientation="Horizontal"
@@ -85,7 +91,7 @@
                         <RowDefinition/>
                     </Grid.RowDefinitions>
                     <ListView Grid.Row="0"  MinHeight="300"
-                              ItemsSource="{Binding Products}"/>
+                              ItemsSource="{Binding Prods}"/>
                     <StackPanel Grid.Row="1"
                                 Orientation="Horizontal"
                                 HorizontalAlignment="Center"
