Заготовка предаставления информации о продуктах

--- a/Bachelor_Net60/Infrastructure/Commands/Commands.xaml
+++ b/Bachelor_Net60/Infrastructure/Commands/Commands.xaml
@@ -4,5 +4,6 @@
 
     <l:ColseWindow x:Key="CloseWindowCommand"/>
     <l:ManageProductsCommand x:Key="ManageProductsCommand"/>
+    <l:CancelEditCommand x:Key="CancelEditCommand"/>
 
 </ResourceDictionary>
