--- a/Bachelor_Net60/Resources/Templates/ModelManagerViews.xaml
+++ b/Bachelor_Net60/Resources/Templates/ModelManagerViews.xaml
@@ -16,4 +16,9 @@
     <DataTemplate DataType="{x:Type vm:ProductEditViewModel}">
         <view:ProductEditView DataContext="{Binding}"/>
     </DataTemplate>
+
+    <DataTemplate DataType="{x:Type vm:ProductDetailsViewModel}">
+        <view:ProductDetailsView DataContext="{Binding}"/>
+    </DataTemplate>
+    
 </ResourceDictionary>
