--- a/Bachelor_Net60/Infrastructure/Commands/Commands.xaml
+++ b/Bachelor_Net60/Infrastructure/Commands/Commands.xaml
@@ -4,6 +4,6 @@
 
     <l:ColseWindow x:Key="CloseWindowCommand"/>
     <l:ManageProductsCommand x:Key="ManageProductsCommand"/>
-    <l:CancelEditCommand x:Key="CancelEditCommand"/>
+    <!--<l:CancelEditCommand x:Key="CancelEditCommand"/>-->
 
 </ResourceDictionary>
