--- a/Bachelor_Net60/Views/ProductDetailsView.xaml
+++ b/Bachelor_Net60/Views/ProductDetailsView.xaml
@@ -4,10 +4,10 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Bachelor_Net60.Views"
-             xmlns:cmd="clr-namespace:Bachelor_Net60.Infrastructure.Commands"             
-             d:DesignHeight="200" d:DesignWidth="200"
-             DataContext="{Binding RelativeSource={RelativeSource Self}}">
-
+             xmlns:cmd="clr-namespace:Bachelor_Net60.Infrastructure.Commands" 
+             xmlns:vm="clr-namespace:Bachelor_Net60.ViewModels"
+             d:DataContext="{d:DesignInstance {x:Type vm:ProductDetailsViewModel}, IsDesignTimeCreatable=True}"
+             d:DesignHeight="200" d:DesignWidth="200">
     <Grid MinWidth="200" HorizontalAlignment="Left">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
@@ -17,13 +17,13 @@
         </Grid.RowDefinitions>
         <StackPanel Grid.Row="0" Orientation="Horizontal" HorizontalAlignment="Right">
             <TextBlock Text="Категория" Margin="5"/>
-            <TextBox Text="{Binding Category}"
+            <TextBox Text="{Binding Category.Name}"
                      Margin="5" Width="100"
                      Focusable="False"/>
         </StackPanel>
         <StackPanel Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Right">
             <TextBlock Text="Название" Margin="5"/>
-            <TextBox Text="{Binding ProductName}" Margin="5" Width="100"/>
+            <TextBox Text="{Binding Product.Name}" Margin="5" Width="100"/>
         </StackPanel>
         <DataGrid Grid.Row="2" MinHeight="100" Margin="5">
 
@@ -33,16 +33,13 @@
                     HorizontalAlignment="Center"
                     Margin="5"
                     IsDefault="True"
+                    Command="{Binding AddProductViewCommand}"
                     Content="Редактировать"/>
             <Button Grid.Row="3"
                     HorizontalAlignment="Center"
                     Margin="5"
                     IsCancel="True"
-                    Content="Удалить"
-                    CommandParameter="{Binding RelativeSource={RelativeSource AncestorType=local:ProductEditView}}">
-                <Button.Command>
-                    <cmd:CancelEditCommand DialogResult="False"/>
-                </Button.Command>
+                    Content="Удалить">                
             </Button>
         </StackPanel>
     </Grid>
